--- a/index.html
+++ b/index.html
@@ -4,21 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <section>
-        <h1>Elizaveta Felzina</h1>
-        <h3>Contacts</h3>
-        <p>Location: Stavropol, Russia</p>
-        <p>Phone: +7 968 27 92 968</p>
-        <p>Email: felzina_liza@mail.ru</p>
-        <p>GitHub: NarutoSasukeForever</p>
+    <section class="info">
+        <div>
+            <img src="cv-photo.jpg" alt="cv photo">
+        </div>
+
+        <div>
+            <h1>Elizaveta Felzina</h1>
+            <h3>Contacts</h3>
+            <p>Location: Stavropol, Russia</p>
+            <p>Phone: +7 968 27 92 968</p>
+            <p>Email: felzina_liza@mail.ru</p>
+            <p>GitHub: NarutoSasukeForever</p>
+        </div>
     </section>
 
     <section>
         <h2>About Me</h2>
-        I finished a linguistic university, know five languages(English, German, French, Spanish, Chinese). Always wanted to try something new, recently finished a Frontend-Developer course from Innopolis University.
+        I finished a linguistic university, know five languages(English, German, French, Spanish, Chinese). 
+        <p>Always wanted to try something new, recently finished a Frontend-Developer course from Innopolis University.</p>
         <h2>Skills</h2>
         <ul>
         <li>HTML
