refactor: changed li

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         <p>Always wanted to try something new, recently finished a Frontend-Developer course from Innopolis University.</p>
         <h2>Skills</h2>
         <ul>
-        <li>HTML
-        <li>CSS
-        <li>JavaScript
-        <li>React
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>React</li>
         </ul>
     </section>
-
+    
     <section>
         <h2>Code Example</h2>
         <p>function sum(a, b) {</p>
