feat: style of a photo and text

--- a/index.html
+++ b/index.html
@@ -17,15 +17,10 @@
                 <div class="img">
                     <img src="cv-photo.jpg" alt="cv-photo">
                 </div>
-
-                <h2>Felzina Elizaveta<br><span>JUNIOR FROND-END DEVELOPER</span></h2>
-                
-
-
+                <h2>FELZINA ELIZAVETA<br><span>JUNIOR FROND-END DEVELOPER</span></h2>
             </div>
 
         </div>
-
         <div class="right-side"></div>
     </div>
 </body>
