--- a/index.html
+++ b/index.html
@@ -65,30 +65,53 @@
                 <ul>
                     <li>
                         <span class="text">English</span>
-                        <span class="percent"></span>
+                        <span class="percent">
+                            <div style="width: 100%;"></div>
+                        </span>
                     </li>
                     <li>
                         <span class="text">German</span>
-                        <span class="percent"></span>
+                        <span class="percent">
+                            <div style="width: 70%;"></div>
+                        </span>
                     </li>
                     <li>
                         <span class="text">Chinese</span>
-                        <span class="percent"></span>
+                        <span class="percent">
+                            <div style="width: 50%;"></div>
+                        </span>
                     </li>
                     <li>
                         <span class="text">Spanish</span>
-                        <span class="percent"></span>
+                        <span class="percent">
+                            <div style="width: 40%;"></div>
+                        </span>
                     </li>
                     <li>
                         <span class="text">French</span>
-                        <span class="percent"></span>
+                        <span class="percent">
+                            <div style="width: 30%;"></div>
+                        </span>
                     </li>
                 </ul> 
-
             </div>
-
         </div>
+
         <div class="right-side">
+            <div class="about">
+                <h2 class="title2">Profile</h2>
+                <p>
+                    I have a main job as a teacher of English and Chinese. 
+                    Programming is my passion. 
+                    I have completed several training courses and 
+                    now I would like to be a part of a Frontend-Developer`s team.
+                    Recently finished a Frontend-Developer course 
+                    from Innopolis University.
+                    I would like to work under the guidance of an 
+                    experience developer to 
+                    improve my programming skills.
+                </p>
+            </div>
             
         </div>
     </div>
