feat: experience, skills

--- a/index.html
+++ b/index.html
@@ -112,6 +112,49 @@
                     improve my programming skills.
                 </p>
             </div>
+            <div class="about">
+                <h2 class="title2">Experience</h2>
+                <div class="box">
+                    <div class="year_company">
+                        <h5>2022-Present</h5>
+                        <h5>Global School</h5>                  
+                    </div>
+                    <div class="text">
+                        <h4>Teacher of English, Chinese</h4>
+                        <p>Conducted lessons with children and adults</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="year_company">
+                        <h5>2019-Present</h5>
+                        <h5>Skyeng</h5>
+                    </div>
+                    <div class="text">
+                        <h4>Teacher of English</h4>
+                        <p>Conducted lessons on a special platform with adults</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="about skills">
+                <h2 class="title2">Professional skills</h2>
+                <div class="box">
+                    <h4>HTML</h4>
+                    <div class="percent"></div>
+                </div>
+                <div class="box">
+                    <h4>CSS</h4>
+                    <div class="percent"></div>
+                </div>
+                <div class="box">
+                    <h4>JavaScript</h4>
+                    <div class="percent"></div>
+                </div>
+                <div class="box">
+                    <h4>Illustrator</h4>
+                    <div class="percent"></div>
+                </div>
+            </div>
             
         </div>
     </div>
