--- a/index.html
+++ b/index.html
@@ -105,10 +105,12 @@
                     Programming is my passion. 
                     I have completed several training courses and 
                     now I would like to be a part of a Frontend-Developer`s team.
+                    <br>
+                    <br>
                     Recently finished a Frontend-Developer course 
                     from Innopolis University.
-                    I would like to work under the guidance of an 
-                    experience developer to 
+                    I would like to work under the guidance of 
+                    an experienced developer to 
                     improve my programming skills.
                 </p>
             </div>
@@ -117,7 +119,9 @@
                 <div class="box">
                     <div class="year_company">
                         <h5>2022-Present</h5>
-                        <h5>Global School</h5>                  
+                        <h5>Global 
+                        <br>
+                        School</h5>                  
                     </div>
                     <div class="text">
                         <h4>Teacher of English, Chinese</h4>
@@ -140,19 +144,39 @@
                 <h2 class="title2">Professional skills</h2>
                 <div class="box">
                     <h4>HTML</h4>
-                    <div class="percent"></div>
+                    <div class="percent">
+                        <div style="width: 95%"></div>
+                    </div>
                 </div>
                 <div class="box">
                     <h4>CSS</h4>
-                    <div class="percent"></div>
+                    <div class="percent">
+                        <div style="width: 80%"></div>
+                    </div>
                 </div>
                 <div class="box">
                     <h4>JavaScript</h4>
-                    <div class="percent"></div>
+                    <div class="percent">
+                        <div style="width: 50%"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <h4>React</h4>
+                    <div class="percent">
+                        <div style="width: 50%"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <h4>Redux</h4>
+                    <div class="percent">
+                        <div style="width: 30%"></div>
+                    </div>
                 </div>
                 <div class="box">
                     <h4>Illustrator</h4>
-                    <div class="percent"></div>
+                    <div class="percent">
+                        <div style="width: 70%"></div>
+                    </div>
                 </div>
             </div>
             
