--- a/index.html
+++ b/index.html
@@ -43,23 +43,6 @@
                 </ul>
             </div>
 
-            
-            <div class="contact-info education">
-                <h3 class="title">Education</h3>
-                <ul>
-                    <li>
-                        <h5>2022</h5>
-                        <h4>Frontend Course</h4>
-                        <h4>Innopolis University</h4>
-                    </li>
-                    <li>
-                        <h5>2018-2022</h5>
-                        <h4>Bachelors Degree in Linguistics</h4>
-                        <h4>Pyatigorsk State University</h4>
-                    </li>
-                </ul>
-            </div>
-
             <div class="contact-info language">
                 <h3 class="title">Languages</h3>
                 <ul>
@@ -95,6 +78,15 @@
                     </li>
                 </ul> 
             </div>
+
+            <div class="contact-info footer">
+                <h3 class="title">Made by</h3>
+                <h3 >NarutoSasukeForever in 2020</h3>
+                <div class="logo">
+                    <img src="rs_school_js.svg" alt="rs school">
+                </div>
+            </div>
+            
         </div>
 
         <div class="right-side">
@@ -113,6 +105,33 @@
                     an experienced developer to 
                     improve my programming skills.
                 </p>
+            </div>
+            <div class="about">
+                <h2 class="title2">Education</h2>
+                <div class="box">
+                    <div class="year_company">
+                        <h5>2022</h5>
+                        <h5>Innopolis
+                        <br>
+                        University</h5>                  
+                    </div>
+                    <div class="text">
+                        <h4>Frontend Course</h4>
+                        <p>Made a two-pages site of a market</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="year_company">
+                        <h5>2018-2022</h5>
+                        <h5>Pyatigorsk  
+                            <br>
+                            University</h5>
+                    </div>
+                    <div class="text">
+                        <h4>Bachelors Degree</h4>
+                        <p>Learned linguistics</p>
+                    </div>
+                </div>
             </div>
             <div class="about">
                 <h2 class="title2">Experience</h2>
