--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
             <div class="contact-info footer">
                 <h3 class="title">Made by</h3>
-                <h3 >NarutoSasukeForever in 2020</h3>
+                <h3 class="title">NarutoSasukeForever in 2022</h3>
                 <div class="logo">
                     <img src="rs_school_js.svg" alt="rs school">
                 </div>
