--- a/index.html
+++ b/index.html
@@ -81,9 +81,13 @@
 
             <div class="contact-info footer">
                 <h3 class="title">Made by</h3>
-                <h3 class="title">NarutoSasukeForever in 2022</h3>
+                <a href="https://github.com/NarutoSasukeForever/rsschool-cv" style="text-decoration: none">
+                    <h3 class="title">NarutoSasukeForever in 2022</h3>
+                </a>
                 <div class="logo">
-                    <img src="rs_school_js.svg" alt="rs school">
+                    <a href="https://rs.school/js/">
+                        <img src="rs_school_js.svg" alt="rs school">
+                    </a>
                 </div>
             </div>
             
