--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
                 <div class="box">
                     <div class="year_company">
                         <h5>2018-2022</h5>
-                        <h5>Pyatigorsk  
+                        <h5>Pyatigorsk 
+                            <br>
+                            State 
                             <br>
                             University</h5>
                     </div>
