--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" 
-    integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="icon" href="./favicon.ico" sizes="any">
 
     <title>Document</title>
@@ -48,33 +48,33 @@
                 <ul>
                     <li>
                         <span class="text">English</span>
-                        <span class="percent">
+                        <div class="percent">
                             <div style="width: 100%;"></div>
-                        </span>
+                        </div>
                     </li>
                     <li>
                         <span class="text">German</span>
-                        <span class="percent">
+                        <div class="percent">
                             <div style="width: 70%;"></div>
-                        </span>
+                        </div>
                     </li>
                     <li>
                         <span class="text">Chinese</span>
-                        <span class="percent">
+                        <div class="percent">
                             <div style="width: 50%;"></div>
-                        </span>
+                        </div>
                     </li>
                     <li>
                         <span class="text">Spanish</span>
-                        <span class="percent">
+                        <div class="percent">
                             <div style="width: 40%;"></div>
-                        </span>
+                        </div>
                     </li>
                     <li>
                         <span class="text">French</span>
-                        <span class="percent">
+                        <div class="percent">
                             <div style="width: 30%;"></div>
-                        </span>
+                        </div>
                     </li>
                 </ul> 
             </div>
